[package]
name = "innojam13"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8"
bevy_rapier2d = { version = "0.18", features = [ "simd-stable", "debug-render", "parallel" ] }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
